--- a/Khabibullin_Glazkisafe/AgentsPage.xaml
+++ b/Khabibullin_Glazkisafe/AgentsPage.xaml
@@ -7,7 +7,7 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="AgentsPage" FontSize="10">
-    <Grid>
+    <Grid IsVisibleChanged="AgentsListView_IsVisibleChanged">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
@@ -64,21 +64,20 @@
             <TextBlock Name="TBCount" FontSize="20" Height="30" ></TextBlock>
             <TextBlock Name="TBAllRecords" FontSize="20" Height="30"></TextBlock>
         </StackPanel>
-        <ListView Name="AgentsListView" Grid.Row="2">
+        <ListView Name="AgentsListView" Grid.Row="2" SelectionChanged="AgentsListView_SelectionChanged">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid>
+                    <Grid Background="{Binding FonStyle}">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="400"/>
+                            <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="50"/>
-                            <RowDefinition Height="50"/>
-                            <RowDefinition Height="50"/>
-                            <RowDefinition Height="50"/>
-                            <RowDefinition Height="50"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
                         <Image Width="200" Grid.Column="0" Grid.RowSpan="4" Stretch="UniformToFill" HorizontalAlignment="Center">
                             <Image.Source>
@@ -95,13 +94,16 @@
                             <TextBlock Text="{Binding GetAgentType}" HorizontalAlignment="Left" FontSize="20"></TextBlock>
                             <TextBlock Text="{Binding Title, StringFormat={} | {0}}" HorizontalAlignment="Left" FontSize="20"></TextBlock>
                         </StackPanel>
-                        <TextBlock Text="{Binding Phone}" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" FontSize="20"></TextBlock>
-                        <TextBlock Text="{Binding ProductPrice, StringFormat={} Продажи за год: {0}}" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" FontSize="20"></TextBlock>
-                        <TextBlock Text="{Binding Priority, StringFormat={} Приоритетность: {0}}" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" FontSize="20"></TextBlock>
-                        <StackPanel Orientation="Horizontal" Grid.Column="2">
-                            <TextBlock Text="Скидка" HorizontalAlignment="Left" FontSize="20" Grid.Row="0"></TextBlock>
-                            <TextBlock Text="{Binding GetDiscount, StringFormat={} {0} %}" HorizontalAlignment="Center" FontSize="20" Grid.Row="1"></TextBlock>
-                            <Button Content="Редактировать" Name="EditButton" Click="EditButton_Click" Grid.Row="2" HorizontalAlignment="Right"></Button>
+                        <TextBlock Text="{Binding Phone}" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" FontSize="20"></TextBlock>
+                        <TextBlock Text="{Binding ProductPrice, StringFormat={} Продажи за год: {0}}" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" FontSize="20"></TextBlock>
+                        <TextBlock Text="{Binding Priority, StringFormat={} Приоритетность: {0}}" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" FontSize="20"></TextBlock>
+                        <StackPanel Grid.Row="0" Grid.Column="2" Grid.RowSpan="3" Orientation="Horizontal" Margin="4">
+                            <TextBlock Text="Скидка" HorizontalAlignment="Left" FontSize="25" Grid.Row="0"></TextBlock>
+                            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <TextBlock Text="{Binding GetDiscount}" FontSize="20" Grid.Row="1"></TextBlock>
+                                <TextBlock Text="%" FontSize="20"></TextBlock>
+                            </StackPanel>
+                            <Button Content="Редактировать" Name="EditButton" Click="EditButton_Click" Grid.Row="2" VerticalAlignment="Bottom"  HorizontalAlignment="Left" ></Button>
                         </StackPanel>
                     </Grid>
                 </DataTemplate>
